Post harvest loss made part of farm activity and completed on farm activity edit